force-app/main/default/objects/ProductAttribute/fields/Power_Range__c.field-meta.xml
<CustomField>
    <fullName>Power_Range__c</fullName>
    <label>Power Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1W</fullName>
            </value>
            <value>
                <fullName>2W</fullName>
            </value>
            <value>
                <fullName>3W</fullName>
            </value>
            <value>
                <fullName>4W</fullName>
            </value>
            <value>
                <fullName>4.8W</fullName>
            </value>
            <value>
                <fullName>5W</fullName>
            </value>
            <value>
                <fullName>6W</fullName>
            </value>
            <value>
                <fullName>8W</fullName>
            </value>
            <value>
                <fullName>9W</fullName>
            </value>
            <value>
                <fullName>9.5W</fullName>
            </value>
            <value>
                <fullName>9.6W</fullName>
            </value>
            <value>
                <fullName>9.9W</fullName>
            </value>
            <value>
                <fullName>10kA</fullName>
            </value>
            <value>
                <fullName>10W</fullName>
            </value>
            <value>
                <fullName>10W/M</fullName>
            </value>
            <value>
                <fullName>11W</fullName>
            </value>
            <value>
                <fullName>12W</fullName>
            </value>
            <value>
                <fullName>14.4W</fullName>
            </value>
            <value>
                <fullName>15W</fullName>
            </value>
            <value>
                <fullName>16W</fullName>
            </value>
            <value>
                <fullName>18W</fullName>
            </value>
            <value>
                <fullName>20kA</fullName>
            </value>
            <value>
                <fullName>20W</fullName>
            </value>
            <value>
                <fullName>22W</fullName>
            </value>
            <value>
                <fullName>24W</fullName>
            </value>
            <value>
                <fullName>25W</fullName>
            </value>
            <value>
                <fullName>30W</fullName>
            </value>
            <value>
                <fullName>32W</fullName>
            </value>
            <value>
                <fullName>35W</fullName>
            </value>
            <value>
                <fullName>36W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>