force-app/main/default/objects/ProductAttribute/fields/Product_Length__c.field-meta.xml
<CustomField>
    <fullName>Product_Length__c</fullName>
    <label>Product Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1M</fullName>
            </value>
            <value>
                <fullName>1.8M</fullName>
            </value>
            <value>
                <fullName>2M</fullName>
            </value>
            <value>
                <fullName>5M</fullName>
            </value>
            <value>
                <fullName>10M</fullName>
            </value>
            <value>
                <fullName>20M</fullName>
            </value>
            <value>
                <fullName>30M</fullName>
            </value>
            <value>
                <fullName>223mm</fullName>
            </value>
            <value>
                <fullName>223.6mm</fullName>
            </value>
            <value>
                <fullName>265mm</fullName>
            </value>
            <value>
                <fullName>295mm</fullName>
            </value>
            <value>
                <fullName>302mm</fullName>
            </value>
            <value>
                <fullName>323mm</fullName>
            </value>
            <value>
                <fullName>323.6mm</fullName>
            </value>
            <value>
                <fullName>413mm</fullName>
            </value>
            <value>
                <fullName>500mm</fullName>
            </value>
            <value>
                <fullName>5000mm</fullName>
            </value>
            <value>
                <fullName>523.6mm</fullName>
            </value>
            <value>
                <fullName>523mm</fullName>
            </value>
            <value>
                <fullName>595mm</fullName>
            </value>
            <value>
                <fullName>614mm</fullName>
            </value>
            <value>
                <fullName>616mm</fullName>
            </value>
            <value>
                <fullName>627mm</fullName>
            </value>
            <value>
                <fullName>750mm</fullName>
            </value>
            <value>
                <fullName>800mm</fullName>
            </value>
            <value>
                <fullName>923mm</fullName>
            </value>
            <value>
                <fullName>1185mm</fullName>
            </value>
            <value>
                <fullName>1220mm</fullName>
            </value>
            <value>
                <fullName>1267mm</fullName>
            </value>
            <value>
                <fullName>1516mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>