force-app/main/default/objects/ProductAttribute/fields/Product_Technology__c.field-meta.xml
<CustomField>
    <fullName>Product_Technology__c</fullName>
    <label>Product Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1xMOPP,2xMOPP</fullName>
            </value>
            <value>
                <fullName>2xMOPP</fullName>
            </value>
            <value>
                <fullName>2xMOPP,BF,Level VI</fullName>
            </value>
            <value>
                <fullName>2xMOPP,BP,Level VI</fullName>
            </value>
            <value>
                <fullName>Active PFC</fullName>
            </value>
            <value>
                <fullName>Active PFC,DALI-2</fullName>
            </value>
            <value>
                <fullName>Active PFC,Level VI</fullName>
            </value>
            <value>
                <fullName>Active PFC,Microprocessor Controlled</fullName>
            </value>
            <value>
                <fullName>Active PFC,Water Cooled</fullName>
            </value>
            <value>
                <fullName>ATX</fullName>
            </value>
            <value>
                <fullName>BLE</fullName>
            </value>
            <value>
                <fullName>BLE,Casambi</fullName>
            </value>
            <value>
                <fullName>Buck-boost mode</fullName>
            </value>
            <value>
                <fullName>DALI</fullName>
            </value>
            <value>
                <fullName>DALI Control Technology</fullName>
            </value>
            <value>
                <fullName>DALI Control Technology,Push-Dim</fullName>
            </value>
            <value>
                <fullName>DALI,PWM,Push-Dim</fullName>
            </value>
            <value>
                <fullName>DALI-2</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>DMX</fullName>
            </value>
            <value>
                <fullName>ECO,Industrial</fullName>
            </value>
            <value>
                <fullName>EnOcean</fullName>
            </value>
            <value>
                <fullName>Flicker Free</fullName>
            </value>
            <value>
                <fullName>High CRI</fullName>
            </value>
            <value>
                <fullName>KNX</fullName>
            </value>
            <value>
                <fullName>Level V</fullName>
            </value>
            <value>
                <fullName>Level VI</fullName>
            </value>
            <value>
                <fullName>Linear</fullName>
            </value>
            <value>
                <fullName>LPS</fullName>
            </value>
            <value>
                <fullName>Non PFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>