force-app/main/default/objects/ProductAttribute/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC/AC</fullName>
            </value>
            <value>
                <fullName>AC/DC</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Actuator</fullName>
            </value>
            <value>
                <fullName>Adaptor</fullName>
            </value>
            <value>
                <fullName>Area Light</fullName>
            </value>
            <value>
                <fullName>Batten</fullName>
            </value>
            <value>
                <fullName>Bidirectional Power Inverter</fullName>
            </value>
            <value>
                <fullName>Buffer Module</fullName>
            </value>
            <value>
                <fullName>Bulk Head</fullName>
            </value>
            <value>
                <fullName>Bus Power Supply</fullName>
            </value>
            <value>
                <fullName>Cabinet Lights</fullName>
            </value>
            <value>
                <fullName>CANBus Protocol</fullName>
            </value>
            <value>
                <fullName>Charger</fullName>
            </value>
            <value>
                <fullName>Configurable</fullName>
            </value>
            <value>
                <fullName>Constant Current</fullName>
            </value>
            <value>
                <fullName>Constant Power</fullName>
            </value>
            <value>
                <fullName>Constant Voltage</fullName>
            </value>
            <value>
                <fullName>DALI Gateway</fullName>
            </value>
            <value>
                <fullName>DC/AC</fullName>
            </value>
            <value>
                <fullName>DC/DC</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>DIN Rail</fullName>
            </value>
            <value>
                <fullName>Downlight</fullName>
            </value>
            <value>
                <fullName>Emergency Kit</fullName>
            </value>
            <value>
                <fullName>Encapsulated</fullName>
            </value>
            <value>
                <fullName>Enclosed</fullName>
            </value>
            <value>
                <fullName>Floodlight</fullName>
            </value>
            <value>
                <fullName>Grid Inverter</fullName>
            </value>
            <value>
                <fullName>Harsh Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>