force-app/main/default/objects/ProductAttribute/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down Lighting</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Full Moon</fullName>
            </value>
            <value>
                <fullName>Half Moon</fullName>
            </value>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Tilt</fullName>
            </value>
            <value>
                <fullName>Up &amp; Down Lighting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>