force-app/main/default/objects/ProductAttribute/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Phase,2-Phase</fullName>
            </value>
            <value>
                <fullName>1-Phase,NEWSOK</fullName>
            </value>
            <value>
                <fullName>1-Phase,NEWSOK,Terminal Blocks</fullName>
            </value>
            <value>
                <fullName>1-Phase,Terminal Blocks</fullName>
            </value>
            <value>
                <fullName>1U</fullName>
            </value>
            <value>
                <fullName>1U,ATX 12V</fullName>
            </value>
            <value>
                <fullName>1U,EPS12V</fullName>
            </value>
            <value>
                <fullName>2U</fullName>
            </value>
            <value>
                <fullName>3-Phase</fullName>
            </value>
            <value>
                <fullName>3-wire input</fullName>
            </value>
            <value>
                <fullName>Angled,Recessed,Surface Mount</fullName>
            </value>
            <value>
                <fullName>Angled,Surface Mount</fullName>
            </value>
            <value>
                <fullName>AT,Industrial</fullName>
            </value>
            <value>
                <fullName>AT,PS2</fullName>
            </value>
            <value>
                <fullName>ATX</fullName>
            </value>
            <value>
                <fullName>Class 2</fullName>
            </value>
            <value>
                <fullName>Class I</fullName>
            </value>
            <value>
                <fullName>Class I,Class II</fullName>
            </value>
            <value>
                <fullName>Class II</fullName>
            </value>
            <value>
                <fullName>COB</fullName>
            </value>
            <value>
                <fullName>DIP</fullName>
            </value>
            <value>
                <fullName>DIP16</fullName>
            </value>
            <value>
                <fullName>DIP21</fullName>
            </value>
            <value>
                <fullName>DIP22</fullName>
            </value>
            <value>
                <fullName>DIP24</fullName>
            </value>
            <value>
                <fullName>DIP7,SMD</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Dual,Industrial</fullName>
            </value>
            <value>
                <fullName>European</fullName>
            </value>
            <value>
                <fullName>Greenmode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>