force-app/main/default/objects/ProductAttribute/fields/UGR__c.field-meta.xml
<CustomField>
    <fullName>UGR__c</fullName>
    <label>UGR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>