force-app/main/default/objects/ProductAttribute/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>4 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>